--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <script type="text/javascript" src="index.js"></script>
     </head>
     <body>
-        <canvas id="canvas" width="800" height="600"></canvas>
+        <div class="canvasContainer">
+            <canvas id="canvas" width="800" height="600"></canvas>
+        </div>
     </body>
 </html>
