--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
-<html>
-    <head>
-        <link rel="stylesheet" type="text/css" href="style.css">
-        <script type="text/javascript" src="index.js"></script>
-    </head>
-    <body>
-        <div class="canvasContainer">
-            <canvas id="canvas"></canvas>
-        </div>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Ping Pong - HrafnkellBaldurs</title>
+
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script type="text/javascript" src="index.js"></script>
+</head>
+<body>
+    <div class="canvasContainer">
+        <canvas id="canvas"></canvas>
+    </div>
+</body>
 </html>
