--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Ping Pong - HrafnkellBaldurs</title>
 
+    <!-- <link href="assets/PressStart2P-Regular.ttf" rel="stylesheet"> -->
     <link rel="stylesheet" type="text/css" href="style.css">
     <script type="text/javascript" src="index.js"></script>
 </head>
